[package]
name = "obj2psx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
colors-transform = "0.2.11"
exoquant = "0.2.0"
gl = "0.14.0"
glam = "0.24.2"
glfw = "0.58.0"
memoffset = "0.9.1"
rand = "0.8.5"
stb_image = "0.2.5"
tobj = "4.0.0"
